--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                             <option value="all">All</option>
                             <option value="target1">Target 1</option>
                             <option value="target2">Target 2</option>
+                            <option value="target3">Target 3</option>
                         </select>
                     </div>
                     <div class="filter-item">
